* Turn $config{wiki_file_prune_regexps} into an array that is easier to   manipulate. * Only exclude rss and atom files from processing if the inline plugin   is enabled and that feed type is enabled. Else it's just a copyable file   type. * Move rss and atom option handling code into the inline plugin. * Applied a rather old patch from Recai to fix the "pruning is too strict"   issue. Now you can have wiki source directories inside dotdirs and the   like, if you want.

--- a/doc/bugs/pruning_is_too_strict.mdwn
+++ b/doc/bugs/pruning_is_too_strict.mdwn
@@ -3,6 +3,8 @@ ikiwiki compiles my wiki successfully. But the svn post-commit hook it installs 
 I think the prune regexp would be more useful if it was only used to check the relative path from the src root to a file in the wiki.
 
 > I agree with this feature wish.  Here is a _first cut_
-> [[implementation|patchqueue/pruning_is_too_strict]] for this feature.
+> implementation for this feature.
 >
 > --[[roktas]]
+
+[[bugs/Done]], and sorry it took so long to apply --[[Joey]]
