--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,17 @@ ikiwiki (1.36) UNRELEASED; urgency=low
   * Fix man page perms in install.
   * Fix an issue with inlining a page with a rss feed inside another
     page with an rss feed.
+  * Turn $config{wiki_file_prune_regexps} into an array that is easier to
+    manipulate.
+  * Only exclude rss and atom files from processing if the inline plugin
+    is enabled and that feed type is enabled. Else it's just a copyable file
+    type.
+  * Move rss and atom option handling code into the inline plugin.
+  * Applied a rather old patch from Recai to fix the "pruning is too strict"
+    issue. Now you can have wiki source directories inside dotdirs and the
+    like, if you want.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 08:50:41 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 13:54:24 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
