--- a/doc/bugs/linkingrules_should_document_how_to_link_to_page_at_root_if_non-root_page_exists.mdwn
+++ b/doc/bugs/linkingrules_should_document_how_to_link_to_page_at_root_if_non-root_page_exists.mdwn
@@ -1,5 +1,5 @@
 The [[linking_rules|subpage/linkingrules]] should document how to link to a page at the root of the wiki when a normal, unadorned link would use a page of the same name further down the hierarchy.  For example, how should [[todo/latex]] link to [[logo]] rather than [[todo/logo|todo/logo]]?
 
 > I agree, unfortunatly the real bug is that the linking rules don't
-> provide a way to do such a link. \[[../foo]] is probably the best
+> provide a way to do such a link. \\[[../foo]] is probably the best
 > approach, although it won't work yet. --[[Joey]]
