web commit by http://ethan.betacantrips.com/

--- a/doc/bugs/pruning_is_too_strict.mdwn
+++ b/doc/bugs/pruning_is_too_strict.mdwn
@@ -8,3 +8,5 @@ I think the prune regexp would be more useful if it was only used to check the r
 > --[[roktas]]
 
 [[bugs/Done]], and sorry it took so long to apply --[[Joey]]
+
+> Thank you! -- Ethan
