--- a/debian/changelog
+++ b/debian/changelog
@@ -18,11 +18,14 @@ ikiwiki (1.36) UNRELEASED; urgency=low
     like, if you want.
   * Patch from Emanuele Aina to fix modification time code in mercurual
     backend.
-  * Add support for links of the form [[../foo]], this links to the page 
+  * Add support for links of the form [[../foo]], this links to the page
     foo a level higher in the directory hierarchy than the one it would link
     to by default.
+  * Fix code to make absolute urls for rss feeds, was missing some urls.
+  * Fix double-escaping of html entities in titles etc in rss feeds
+    that occured if escaped characters were present in the page filename.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 15:10:03 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 16:28:54 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
