--- a/debian/changelog
+++ b/debian/changelog
@@ -18,9 +18,7 @@ ikiwiki (1.36) UNRELEASED; urgency=low
     like, if you want.
   * Patch from Emanuele Aina to fix modification time code in mercurual
     backend.
-  * Add support for links of the form [[../foo]], this links to the page
-    foo a level higher in the directory hierarchy than the one it would link
-    to by default.
+  * Add support for links of the form [[/foo]]
   * Fix code to make absolute urls for rss feeds, was missing some urls.
   * Fix double-escaping of html entities in titles etc in rss feeds
     that occured if escaped characters were present in the page filename.
