--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -2,4 +2,4 @@ How about a plugin adding a
 [[preprocessor_directive|preprocessordirective]] to render some given LaTeX
 as a PNG via [[debpkg dvipng]] and include the resulting image in the page?
 Useful for mathematics, as well as for stuff like the LaTeX version of the
-ikiwiki [[../../logo]].
+ikiwiki [[/logo]].
