--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -80,6 +80,9 @@ easily, perl is possible (but I'm not strong in perl).
 >
 > -- Josh Triplett
 
+>> Thanks for an excellent Xmas present, I will appreciate the additional 
+>> users this will help switch to ikiwiki! --[[Joey]]
+
 ----
 
 # OpenID
