--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.36) UNRELEASED; urgency=low
+ikiwiki (1.36) unstable; urgency=low
 
   * Fix various links on the hyperestradier pages.
   * Use POST for poll to avoid some robots.
@@ -23,7 +23,7 @@ ikiwiki (1.36) UNRELEASED; urgency=low
   * Fix double-escaping of html entities in titles etc in rss feeds
     that occured if escaped characters were present in the page filename.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 16:28:54 -0500
+ -- Joey Hess <joeyh@debian.org>  Fri, 22 Dec 2006 15:55:05 -0500
 
 ikiwiki (1.35) unstable; urgency=low
 
