web commit by JoshTriplett: Fix typo: s/hyperestradier/hyperestraier/

--- a/doc/news/version_1.36.mdwn
+++ b/doc/news/version_1.36.mdwn
@@ -1,6 +1,6 @@
 ikiwiki 1.36 released with [[toggle text="these changes"]]
 [[toggleable text="""
-   * Fix various links on the hyperestradier pages.
+   * Fix various links on the hyperestraier pages.
    * Use POST for poll to avoid some robots.
    * Fix sometimes broken links to Discussion pages from blog pages.
    * Add userdir config setting.
