* Add mirrorlist plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (1.37) UNRELEASED; urgency=low
+
+  * Add mirrorlist plugin.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 22 Dec 2006 19:54:41 -0500
+
 ikiwiki (1.36) unstable; urgency=low
 
   * Fix various links on the hyperestradier pages.
