* Fixed permissions of some files that were 600 in the tarball. (Did not   affect the deb).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 ikiwiki (1.37) UNRELEASED; urgency=low
 
   * Add mirrorlist plugin.
+  * Fixed permissions of some files that were 600 in the tarball. (Did not
+    affect the deb).
 
- -- Joey Hess <joeyh@debian.org>  Fri, 22 Dec 2006 19:54:41 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 23 Dec 2006 00:49:16 -0500
 
 ikiwiki (1.36) unstable; urgency=low
 
