--- a/doc/bugs/wrong_permissions_on_some_files_in_source.mdwn
+++ b/doc/bugs/wrong_permissions_on_some_files_in_source.mdwn
@@ -7,3 +7,5 @@ ikiwiki/templates/atompage.tmpl
 
 This means that (depending on installation) maybe the permissions are wrong for the final install.
 So when ikiwiki is ran (as non-root) it fails.
+
+> [[bugs/done]] (in my tree) --[[Joey]]
