--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -56,10 +56,12 @@ These options control the mode that ikiwiki is operating in.
   In setup mode, ikiwiki reads the config file, which is really a perl
   program that can call ikiwiki internal functions.
 
+  [[ikiwiki.setup]] is an example of such a config file.
+
   The default action when --setup is specified is to automatically generate
   wrappers for a wiki based on data in a config file, and rebuild the wiki.
-
-  [[ikiwiki.setup]] is an example of such a config file.
+  If you only want to build any changed pages, you can use --refresh with
+  --setup.
 
 * --wrappers
 
