--- a/doc/bugs/__63__Discussion_when_not_CGI_mode.mdwn
+++ b/doc/bugs/__63__Discussion_when_not_CGI_mode.mdwn
@@ -4,4 +4,6 @@ But I did have a "?Discussion" link still and that is CGI.
 
 So the bug (I think) is that it has a hyperlink to a CGI when CGI is not enabled.
 
+> [[bugs/done]] -- [[Joey]]
+
 (Note that my title above has _63_ but was supposed to be a question mark.)
