response and doc improvement

--- a/doc/bugs/space_in_a___91____91__page_link__93____93___doesn__39__t_make_link.mdwn
+++ b/doc/bugs/space_in_a___91____91__page_link__93____93___doesn__39__t_make_link.mdwn
@@ -15,6 +15,14 @@ A moment later ... same thing ... it is not a link (no question mark to create).
 
 Is this documented? How do I create a webpage with space in filename?
 
+> You use underscores in place of spaces. I've improved the docs a bit.
+> Spaces are not allowed because preprocessor directives look like
+> wikilinks, except they contain one or more spaces.. --[[Joey]]
+
 Examples in various files show spaces within the double brackets.
+
+> I don't know of any that do that, can you either point me to them or fix
+> them in the wiki? Note that examples of preprocessor directives _will_
+> contain spaces. --[[Joey]]
 
 (By the way, the Page Location dropdown above has underscores for spaces and underscore91underscore and 93 and 39 instead of left bracket, right bracket and single quote. When rendered on final page it will be correct but in the select option box it looks strange.)
