--- a/basewiki/wikilink.mdwn
+++ b/basewiki/wikilink.mdwn
@@ -18,3 +18,6 @@ links at the start of a sentence, and so on.
 It's also possible to write a WikiLink that uses something other than the
 page name as the link text. For example "\[[foo_bar|SandBox]]" links to the
 SandBox page, but the link will appear like this: [[foo_bar|SandBox]]
+
+Note that you cannot use spaces in WikiLinks. Replace spaces with
+underscores.
