--- a/debian/changelog
+++ b/debian/changelog
@@ -3,9 +3,9 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * Add mirrorlist plugin.
   * Fixed permissions of some files that were 600 in the tarball. (Did not
     affect the deb).
-  * Avoid creating edit links when not in cgi mode.
+  * Avoid creating edit links when the cgi url is not known.
   * Avoid displaying discussion links at all, if there's not a discussion
-    page, when not in cgi mode.
+    page, when the cgi url isn't known.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 23 Dec 2006 01:17:54 -0500
 
