--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,7 @@ ikiwiki (1.37) UNRELEASED; urgency=low
 
 ikiwiki (1.36) unstable; urgency=low
 
-  * Fix various links on the hyperestradier pages.
+  * Fix various links on the hyperestraier pages.
   * Use POST for poll to avoid some robots.
   * Fix sometimes broken links to Discussion pages from blog pages.
   * Add userdir config setting.
