--- a/debian/changelog
+++ b/debian/changelog
@@ -6,12 +6,13 @@ ikiwiki (1.37) UNRELEASED; urgency=low
   * Avoid creating edit links when the cgi url is not known.
   * Avoid displaying discussion links at all, if there's not a discussion
     page, when the cgi url isn't known.
-  * Before, svn was used as the RCS by default unless configured otherwise,  
+  * Before, svn was used as the RCS by default unless configured otherwise,
     now it defaults to using no RCS unless configured to do so, to avoid some
-    suprising behavior when using a setup file and not uncommenting any RCS
-    options. 
+    suprising behavior when using a setup file and not uncommenting any RCS 
+    options.
+  * Fix some bugs in the commit email sending code.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 23 Dec 2006 01:51:49 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 24 Dec 2006 00:51:11 -0500
 
 ikiwiki (1.36) unstable; urgency=low
 
