--- a/doc/news/cia.mdwn
+++ b/doc/news/cia.mdwn
@@ -1,4 +1,4 @@
 Commits to ikiwiki's source code are now fed into
 [CIA](http://cia.navi.cx/), and can be browsed, subscribed to etc on its
-[http://cia.navi.cx/stats/project/ikiwiki](project page). Note that changes
+[project page](http://cia.navi.cx/stats/project/ikiwiki). Note that changes
 to the documentation wiki are currently excluded.
