web commit by JeremyReed: ask about max submit size

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -218,3 +218,10 @@ editing a page. Is that an option that can be enabled?
 
 > It's doable, it could even be done by a [[todo/plugin]], I think.
 > --[[Joey]]
+
+----
+
+# Max submit size?
+
+Any setting for limiting how many kilobytes can be submitted via the "edit" form?
+-- [[JeremyReed]]
