web commit by JeremyReed: mention rcshistory CGI

--- a/doc/contrib/rcs___40__third-party_plugin__41__.mdwn
+++ b/doc/contrib/rcs___40__third-party_plugin__41__.mdwn
@@ -2,3 +2,7 @@ Here is a beginning of a rcs plugin that uses rcsmerge, rcs, ci, co and rlog.
 I have used it probably over hundred times but needs some work.
 
 <http://www.reedmedia.net/~reed/tmp-sfhkcjkfrfh/rcs.pm>
+
+Also here is a quick script to browse the RCS history to use for "historyurl".
+
+<http://www.reedmedia.net/~reed/tmp-sfhkcjkfrfh/rcshistory.txt>
