web commit by JeremyReed: mention my RCS plugin

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -200,6 +200,10 @@ Any examples of using co(1), ci(1) and other RCS related tools with ikiwiki?
 >>
 >> --JeremyReed
 
+>> I made a working rcs plugin. And I made a RCS-to-web CGI. Details
+>> at [[contrib/rcs_(third-party_plugin)]]
+>> --[[JeremyReed]]
+
 ----
 
 # Using with CVS?
