--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -201,8 +201,10 @@ Any examples of using co(1), ci(1) and other RCS related tools with ikiwiki?
 >> --JeremyReed
 
 >> I made a working rcs plugin. And I made a RCS-to-web CGI. Details
->> at [[contrib/rcs_(third-party_plugin)]]
+>> at [[patchqueue/rcs_(third-party_plugin)]]
 >> --[[JeremyReed]]
+>>
+>> (Moved to patchqueue --[[Joey]])
 
 ----
 
@@ -229,3 +231,5 @@ editing a page. Is that an option that can be enabled?
 
 Any setting for limiting how many kilobytes can be submitted via the "edit" form?
 -- [[JeremyReed]]
+
+> Not currently. Worried about abuse? --[[Joey]]
