web commit by JeremyReed: disable sub-discussion pages?

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -233,3 +233,12 @@ Any setting for limiting how many kilobytes can be submitted via the "edit" form
 -- [[JeremyReed]]
 
 > Not currently. Worried about abuse? --[[Joey]]
+
+----
+
+# Disable sub-discussion pages?
+
+Any setting to disable having a discussion of a discussion?
+The [[features]] page says every page, but I don't want every page.
+I do want discussion subpage, but I don't want to have, for example: discussion/ discussion/ discussion.
+-- [[JeremyReed]]
