web commit by http://mazirian.myopenid.com/: Textile Plugin

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -260,3 +260,9 @@ I added a comma to it in my IkiWiki.pm in the defaultconfig(). But that was wron
 What is the correct way to include ,v RCS revision files in my source tree without receiving the "bad" messages and without copying over to www tree?
 
 -- [[JeremyReed]]
+
+----
+
+# Textile Plugin
+
+It was trivial, but I put together a plugin that uses the Textile markup language, which I find to be the most superior of the various options for that sort of thing.  Where or how do I submit it for inclusion?
