--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -265,4 +265,8 @@ What is the correct way to include ,v RCS revision files in my source tree witho
 
 # Textile Plugin
 
-It was trivial, but I put together a plugin that uses the Textile markup language, which I find to be the most superior of the various options for that sort of thing.  Where or how do I submit it for inclusion?
+It was trivial, but I put together a plugin that uses the Textile markup
+language, which I find to be the most superior of the various options for
+that sort of thing.  Where or how do I submit it for inclusion?
+
+> You can post it to [[plugins/contrib]]. --[[Joey]]
