web commit by http://getopenid.com/ptecza: Response

--- a/doc/bugs/hardcoded___34__Discussion__34___link.mdwn
+++ b/doc/bugs/hardcoded___34__Discussion__34___link.mdwn
@@ -19,8 +19,17 @@ or "History".
 > There are good reasons for feeding a full html link into the template,
 > rather than the urls used for the other links. For one, the Discussion
 > link needs to be different if the Discussion page doesn't yet exist.
-> 
+
+>> You can always use <tmpl_if> and <tmpl_else> construct in that place ;) --Pawel
+ 
 > As noted in [[patchqueue/l10n]], there are some other places in ikiwiki
 > that hard code English strings, and I feel that using standard gettext
 > and po files is the best approach for these, although Recai suggested an
 > approach of translating the strings using a template file. --[[Joey]]
+
+>> You know that I rather prefer static templates, but it's your choice,
+>> of course.
+>> 
+>> BTW, is there a chance for configurable name of Discussion page?
+>> In my wiki I use only Polish name of pages, so I would like to have
+>> dyskusja.html page, instead of discussion.html page. --Pawel
