--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -243,7 +243,7 @@ configuration options of their own.
 
 * --verbose, --no-verbose
 
-  Be vebose about what is being done.
+  Be verbose about what is being done.
 
 * --syslog, --no-syslog
 
