--- a/doc/patchqueue/rcs___40__third-party_plugin__41__.mdwn
+++ b/doc/patchqueue/rcs___40__third-party_plugin__41__.mdwn
@@ -3,6 +3,19 @@ I have used it probably over hundred times but needs some work.
 
 <http://www.reedmedia.net/~reed/tmp-sfhkcjkfrfh/rcs.pm>
 
+> Clearly needs some cleanup and perhaps some of the missing stubs
+> implemented, before it can be included into ikiwiki. 
+> 
+> Notes on individual functions:
+> * rcs_prepedit - I'm not sure why you do the locking since the comment
+>   notes that the locking does no good..
+> * rcs_getctime - You ask why this would be better than mtime. It's
+>   because with something like subversion, a file's modification time or
+>   ctime is not necessarily accurate WRT when the file was first checked
+>   into the repo.
+> 
+--[[Joey]]
+
 Also here is a quick script to browse the RCS history to use for "historyurl".
 
 <http://www.reedmedia.net/~reed/tmp-sfhkcjkfrfh/rcshistory.txt>
