web commit by http://mazirian.myopenid.com/

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -212,3 +212,7 @@ language, which I find to be the most superior of the various options for
 that sort of thing.  Where or how do I submit it for inclusion?
 
 > You can post it to [[plugins/contrib]]. --[[Joey]]
+
+>> Thanks.  I tried using the "Add new post" form there, but apparently made a [mess of things somehow](http://ikiwiki.kitenet.net/contrib/textile___40__third-party_plugin__41__.html).  Sorry about that.
+
+How does one go about making a markup language added by means of a plugin, the default markup language.  In other words, I would like the index page to be written in Textile.  If I include a index.txtl (where txtl is the extension I have assigned to be handled by the textile plugin), ikiwiki will ignore it and make a new index.mdwn.
