--- a/doc/plugins/contrib.mdwn
+++ b/doc/plugins/contrib.mdwn
@@ -1,6 +1,6 @@
 Contributed [[plugins]]:
 
-[[inline pages="plugins/contrib/* !*/Discussion" archive="yes" rootpage="contrib" show="60"]]
+[[inline pages="plugins/contrib/* !*/Discussion" archive="yes" rootpage="plugins/contrib" show="60"]]
 
 # Installing third party plugins
 
